[LL-3898] Add warnings to tace view; fix truncate pipe (#1353)
* fully functioning warn system
* limit functionality as decided on GDS meeting

--- a/client/src/app/sankey-viewer/components/sankey-view.component.scss
+++ b/client/src/app/sankey-viewer/components/sankey-view.component.scss
@@ -40,5 +40,9 @@
   & > *:first-child {
     pointer-events: none;
     background: none;
+
+    & > * {
+      pointer-events: all;
+    }
   }
 }
